update iteration visuals and remove slider

--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -1016,79 +1016,4 @@
                         <li><b>Flexibility in times of uncertainty.</b> Our team ran into difficulties when recruiting participants for our surveys and interviews. Fortunately, we were able to widen our participant pool through our sponsor and personal connections.</li>
                     </ul>
                 </div>
-                <div class="next-steps">
-                    <p>
-                        If we had more time, I would definitely want to test the high-fidelity prototype with further user testing. I would also want to have more input from staff perspective as our project had mainly focused on student-view - fleshing out the staff user flow would allow more insight on if there are any features we missed. Some questions I would want to explore are:
-                    </p>
-                    <ul class="next-steps list">
-                        <li>How intuitive do users find the filtering?</li>
-                        <li>Are there any STEM resources missing?</li>
-                        <li>How would further implementation of this project when broadening the scope to include the other schools in the PNW LSAMP?
-                        <li>Can we observe success metrics such as increase in engagement rate of students accessing STEM resources?
-                        <li>Are the features and designs feasible to implement from a developer standpoint?</li>
-                    </ul>
-                </div>
-                <div class="reflections">
-                    <div>
-                        <p>
-                            Overall, this 6-month project was an incredibly rewarding learning experience as I had the opportunity to work on an end-to-end project. It was super cool to look back and see how our project started from a concept idea that our sponsor had to a website prototype after many months of extensive research, analysis, and ideation. Thank you to my amazing team members, Rachel, Kayal, and Shreya - Go Team CCRS! ◡̈
-                        </p>
-                    </div>
-                    <div class="image-container flex-column"> 
-                        <img
-                        src="../assets/images/uw-cerse/team-picture.JPEG"
-                        alt="Team CCRS (Rachel, Kayal, Shreya, Jocelyn) from left to right"
-                        loading="lazy"
-                        class="team-picture-image"/>
-                        <p class="image-caption">Team CCRS: Rachel, Kayal, Shreya, Jocelyn</p>
-                    </div>
-                </div>
-
-
-            </div>
-
-        </section>
-
-        <!-- Scroll to top -->
-        <i class="scroll-up" id="scroll-up">
-            <i class="fa-solid fa-circle-chevron-up fa-2xl"></i>
-        </i>
-
-        <!-- Footer section -->
-        <footer>
-            <div class="two-column">
-                <div class="column">
-                    <h2 class="secondary">Thanks for stopping by!</h2>
-                    <p>If you'd like to connect, send me a message ◡̈</p>
-                    <p class="footer-link secondary">
-                        <a href="mailto: jocelynchen1126@gmail.com" class="link">Email</a> /
-                        <a href="https://www.linkedin.com/in/jocelyn-chen-/" class="link">LinkedIn</a>
-                    </p>
-                </div>
-                <div class="column right-align-text">
-                    <p class="secondary footer-copy">beep boop beep by jocelyn</p>
-                    <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
-                </div>
-            </div> 
-        </footer>
-
-        <!-- Website scripts -->
-        <script src="../assets/js/app.js"></script>
-
-        <!-- Ion icons scripts -->
-        <script
-            type="module"
-            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js">
-        </script>
-        <script
-            nomodule
-            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">
-        </script>
-
-        <!-- Font Awesome icons scripts -->
-        <script 
-            src="https://kit.fontawesome.com/a2a7dc6fc7.js" 
-            crossorigin="anonymous">
-        </script>
-    </body>
-</html>
+                <div class="next-s
