--- a/index.html
+++ b/index.html
@@ -132,17 +132,27 @@
             <div class="playground-grid div-margin">
                 <div class="playground-div">
                     <img 
-                        src="../assets/images/playground/boba-run.png"
+                        src="./assets/images/playground/boba-run.png"
                         alt="Boba Run Game"
                         loading="lazy"
-                        class="playground-image"
-                    />
+                        class="playground-image"/>
+                    <p class="image-caption">Boba Run</p>
                 </div>
                 <div class="playground-div">
-
+                    <img 
+                        src="./assets/images/playground/mint-mobile.png"
+                        alt="Mint Mobile Redesign"
+                        loading="lazy"
+                        class="playground-image"/>
+                    <p class="image-caption">Mint Mobile</p>
                 </div>
                 <div class="playground-div">
-
+                    <img 
+                        src="./assets/images/playground/vera-project.png"
+                        alt="Vera Project Redesign"
+                        loading="lazy"
+                        class="playground-image"/>
+                    <p class="image-caption">The Vera Project</p>
                 </div>
                 <a href="/playground/" class="view-more">View more &rarr;</a>
             </div>
