--- a/playground/index.html
+++ b/playground/index.html
@@ -32,27 +32,29 @@
 
         <!-- Playground -->
         <section class="playground section-regular">
-            <h1>My playground &darr;</h1>        
-            <h3 class="secondary">a series of archived projects & just for fun </h3>   
+            <h1>My playground &darr;</h1> 
             <div class="div-margin">
-                <h2>playground.archive</h2> 
+                <h2>Playground.archive</h2> 
+                <p class="secondary">a series of archived projects</p>
                 <div class="playground-container">
                     <div class="playground-item-container">
-                        <div class="playground-item">
-                            <img 
-                            src="../assets/images/playground/boba-run.png"
-                            alt="Boba Run Game"
-                            loading="lazy"
-                            class="playground-image"
-                            />
+                        <div class="playground-item linkable">
+                            <a href="https://jclync.github.io/boba-run/">
+                                <img 
+                                src="../assets/images/playground/boba-run.png"
+                                alt="Boba Run Game"
+                                loading="lazy"
+                                class="playground-image"
+                                />
+                            </a>
                         </div>
-                        <p class="subheader">Boba Run</p>
+                        <p class="subheader"><a href="https://jclync.github.io/boba-run/">Boba Run</a></p>
                         <p>Game inspired by Cookie Run, coded entirely in JavaScript</p>
                     </div>
                     <div class=playground-item-container>
                         <div class="playground-item">
                             <img 
-                            src=""
+                            src="../assets/images/playground/mint-mobile.png"
                             alt="Mint Mobile Project"
                             loading="lazy"
                             class="playground-image"
@@ -61,7 +63,21 @@
                         <p class="subheader">Mint Mobile</p>
                         <p>Communications Strategy for Mint Mobile's Instagram</p>
                     </div>
-                    <div class="playground-item-container landscape">
+                    <div class=playground-item-container>
+                        <div class="playground-item linkable">
+                            <a href="../assets/file-uploads/vera-project-brand-book.pdf" target="_blank">
+                                <img 
+                                src="../assets/images/playground/vera-project.png"
+                                alt="The Vera Project Redesign"
+                                loading="lazy"
+                                class="playground-image"
+                                />
+                            </a>
+                        </div>
+                        <p class="subheader"><a href="../assets/file-uploads/vera-project-brand-book.pdf" target="_blank">The Vera Project Redesign</a></p>
+                        <p>Rebranding a local music & arts non-profit community space</p>
+                    </div>
+                    <div class="playground-item-container">
                         <div class="playground-item landscape">
                             <img 
                             src="../assets/images/playground/bobaaa.gif"
@@ -71,12 +87,13 @@
                             />
                         </div>
                         <p class="subheader">Bobaaa</p>
-                        <p>Random boba drink generator that runs using 2 APIs, coded in Python and HTML</p>
+                        <p>Random boba generator that uses 2 APIs to suggest a boba drink based on a person's emotion, coded in Python and HTML</p>
                     </div>
                 </div>
             </div>
             <div class="div-margin">
-                <h2>playground.just for fun</h2>
+                <h2>Playground.just for fun</h2>
+                <p class="secondary">ways I stay creative outside of design</p>
             </div>
         </section>
 
