edit responsive layout

--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -134,17 +134,15 @@
                 </p>
             </div>
             <div class="findings-recommendations-grid div-margin">
-                <p class="secondary mobile-hidden">Interview Insights</p>
-                <div class="findings-recommendations-container">
-                    <div class="findings-container column">
-                        <p class="secondary mobile-query">Interview Finding #01</p>
-                        <h3>Too many communication channels</h3>
+                <p class="secondary">Interview Insights</p>
+                <div class="findings-recommendations-container no-top-border no-top-margin">
+                    <div class="findings-container box">
+                        <h3>1. Too many communication channels</h3>
                         <p>
                             Students express frustration with having to manage multiple apps for communication, such as Canvas, Instagram, Discord, Messenger, etc.
                         </p>                        
                     </div>
-                    <div class="recommendations-container column">
-                        <p class="secondary mobile-query">Recommendation #01</p>
+                    <div class="recommendations-container box">
                         <h3>Unified communications hub</h3>
                         <p>
                             A centralized platform serves as a one-stop solution for tracking peers, instructors, and class-related content and communications.
@@ -152,15 +150,13 @@
                     </div>
                 </div>
                 <div class="findings-recommendations-container">
-                    <div class="findings-container column">
-                        <p class="secondary mobile-query">Interview Finding #02</p>
-                        <h3>Lack of engagement</h3>
+                    <div class="findings-container box">
+                        <h3>2. Lack of engagement</h3>
                         <p>
                             Students feel there is a lack of interaction in online learning, making it difficult to stay engaged and follow along with the coursework.
                         </p>                        
                     </div>
-                    <div class="recommendations-container column">
-                        <p class="secondary mobile-query">Recommendation #02</p>
+                    <div class="recommendations-container box">
                         <h3>Interactive forums</h3>
                         <p>
                             Increase engagement through community forums where students actively converse with instructors and peers regarding course-related content.
@@ -168,15 +164,13 @@
                     </div>
                 </div>
                 <div class="findings-recommendations-container">
-                    <div class="findings-container column no-bottom-margin">
-                        <p class="secondary mobile-query">Interview Finding #03</p>
-                        <h3>Community building</h3>
+                    <div class="findings-container box no-bottom-margin">
+                        <h3>3. Community building</h3>
                         <p>
                             Students desire opportunities to connect and interact with their peers.  
                         </p>                        
                     </div>
-                    <div class="recommendations-container column no-bottom-margin">
-                        <p class="secondary mobile-query">Recommendation #03</p>
+                    <div class="recommendations-container box">
                         <h3>Empowering collaboration</h3>
                         <p>
                             Give students the agency to create and join groups, fostering collaboration with peers on projects and coursework. 
