--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -495,8 +495,8 @@
             <div class="findings-recommendations div-margin">
                 <p class="secondary">Highlighted Research Findings</p>
                 <h2>What did we uncover?</h2>
-                <div class="findings-recommendations-grid div-margin no-top-border">
-                    <div class="findings-recommendations-container">
+                <div class="findings-recommendations-grid div-margin">
+                    <div class="findings-recommendations-container no-top-border">
                         <div class="findings-container box">
                             <h3>1. Mode of technology</h3>
                             <p>
@@ -555,14 +555,13 @@
                         <div class="findings-container box">
                             <h3>5. Community building</h3>
                             <p>
-                                Students and staff expressed desire for interpersonal relationships, which would enhance social engagement 
-                                and provide accountability.
+                                Students and staff expressed desire for interpersonal relationships, which would enhance social engagement through networking opportunities, as well as provide accountability.
                             </p>                        
                         </div>
                         <div class="recommendations-container box">
                             <h3>Messaging feature / online social groups</h3>
                             <p>
-                                Community forums and messaging features to cultivate mentorship relationships and foster connections within groups, creating opportunity to find like-minded peers for collaboration and networking. 
+                                Community forums and messaging features to cultivate relationships and foster connections within groups, creating opportunity to find like-minded peers for collaboration and networking. 
                             </p>
                         </div>
                     </div>
@@ -574,7 +573,7 @@
                                 aspirations while seeking out STEM-related resources.
                             </p>                        
                         </div>
-                        <div class="recommendations-container box no-bottom-margin">
+                        <div class="recommendations-container box">
                             <h3>Tailored profile</h3>
                             <p>Personalized profile page to let users select which resources they are interested in.</p>
                         </div>
