--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <link rel="stylesheet" href="../assets/css/styles-uw-cerse.css" />
 
+        <!-- favicon -->
+        <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
+
         <title>UW CERSE STEM Equity Resource Hub | Jocelyn Chen's Portfolio</title>
   </head>
 
