--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <link rel="stylesheet" href="../assets/css/styles-husky-buddy.css" />
 
+        <!-- favicon -->
+        <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
+
         <title>Husky Buddy | Jocelyn Chen's Portfolio</title>
   </head>
 
