--- a/playground/index.html
+++ b/playground/index.html
@@ -9,10 +9,11 @@
         <link rel="stylesheet" href="../assets/css/styles.css" />
 
         <!-- Animate CSS CDN -->
-        <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+        <!-- favicon -->
+        <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
+
         <title>Playground | Jocelyn Chen's Portfolio</title>
     </head>
     <body class="playground-page">
