--- a/robert-half-digital-modernization/index.html
+++ b/robert-half-digital-modernization/index.html
@@ -15,6 +15,9 @@
         <!-- CSS Styles -->
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <link rel="stylesheet" href="../assets/css/styles-robert-half.css" />
+
+        <!-- favicon -->
+        <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
     </head>
 
     <body class="staticrypt-body">
