--- a/template.html
+++ b/template.html
@@ -13,6 +13,10 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
+
+        <!-- favicon -->
+        <link rel="icon" type="image/x-icon" href="../assets/images/logo.svg">
+
         <title>TITLE | Jocelyn Chen's Portfolio</title>
   </head>
 
