--- a/playground/index.html
+++ b/playground/index.html
@@ -33,9 +33,9 @@
 
         <!-- Playground -->
         <section class="playground section-regular">
-            <h1>My playground &darr;</h1> 
+            <h1>welcome to my playground ◡̈</h1> 
             <div class="div-margin">
-                <h2>Playground.archive</h2> 
+                <h2>playground.archive</h2> 
                 <p class="secondary">a series of archived projects</p>
                 <div class="playground-container">
                     <div class="playground-item-container">
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="div-margin">
-                <h2>Playground.just for fun</h2>
+                <h2>playground.just for fun</h2>
                 <p class="secondary">ways I stay creative outside of design</p>
             </div>
         </section>
