update footer and rh case study

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <h2 class="secondary">Thanks for stopping by!</h2>
                     <p>If you'd like to connect, send me a message ◡̈</p>
                     <p class="footer-link secondary">
-                        <a href="mailto: jocelynchen1126@gmail.com" class="link">Email</a> /
+                        <a href="mailto: jocelynchen1126@gmail.com" class="link">jocelynchen1126@gmail.com</a> /
                         <a href="https://www.linkedin.com/in/jocelyn-chen-/" class="link">LinkedIn</a>
                     </p>
                 </div>
