--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -22,7 +22,7 @@
         <title>UW CERSE STEM Equity Resource Hub | Jocelyn Chen's Portfolio</title>
   </head>
 
-  <body class="uw-cerse-page">
+  <body class="uw-cerse-page" id="case-study-page">
         <!-- Navbar -->
         <div class="navbar" id="navbar">
             <a href=".." class="home-item">Jocelyn Chen</a>
@@ -1063,7 +1063,7 @@
                     <h2 class="secondary">Thanks for stopping by!</h2>
                     <p>If you'd like to connect, send me a message ◡̈</p>
                     <p class="footer-link secondary">
-                        <a href="mailto: jocelynchen1126@gmail.com" class="link">Email</a> /
+                        <a href="mailto: jocelynchen1126@gmail.com" class="link">jocelynchen1126@gmail.com</a> /
                         <a href="https://www.linkedin.com/in/jocelyn-chen-/" class="link">LinkedIn</a>
                     </p>
                 </div>
