update about me page

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,6 @@
             </button>
         </div>
         <section class="about-me-section section-regular">
-            <h1 class="header">Hi again! Here's a little about me..</h1>
             <div class="dashboard">
                 <div class="profile-image-box">
                     <img
@@ -43,6 +42,7 @@
                     class="about-me-image"/>
                 </div>
                 <div class="bio-box">
+                    <h2>Hi again! Here's a little about me..</h2>
                     <p>
                         I first learned about design when I took a coding class in high school and learned how to use 
                         Javascript to code an interactive minigame for my class project. With interests in the intersection 
@@ -95,7 +95,7 @@
                         <li><a href="../assets/file-uploads/Jocelyn_Chen_Resume.pdf" target="_blank" class="secondary link">Resume&nearr;</a></li>
                     </ul>
                 </div>
-                <div class="design-philosophy-box">
+                <div class="design-philosophy-box hidden">
                     <h2>My design philosophy</h2>
                     <ul>
                         <li>Jane just set a new record in cycling: 30 miles!</li>
