add meta description tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Hi! I'm Jocelyn, a product designer striving to create meaningful and enjoyable experiences that make a positive impact on people's lives."/>
 
         <!--CSS Styles -->
         <link rel="stylesheet" href="assets/css/styles.css" />
