--- a/robert-half-digital-modernization/index.html
+++ b/robert-half-digital-modernization/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Protected Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration."/>
 
         <!-- do not cache this page -->
         <meta http-equiv="cache-control" content="max-age=0" />
