--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="I am passionate about creating digital products that are inclusive and user-centric. As a designer, I seek to bring people together using the products that I create, making meaningful impacts in their lives."/>
 
         <!--CSS Styles -->
         <link rel="stylesheet" href="../assets/css/styles.css" />
