update home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Hi! I'm Jocelyn, a product designer striving to create meaningful and enjoyable experiences that make a positive impact on people's lives."/>
+        <meta name="description" content="Hi! I'm Jocelyn, a product designer passionate about to crafting delightful and meaningful experiences that make a positive impact on people's lives."/>
 
         <!--CSS Styles -->
         <link rel="stylesheet" href="assets/css/styles.css" />
@@ -45,9 +45,10 @@
                     class="hero-img"
                     />
                     <div class="home-bio">
-                        <h1>Jocelyn Chen</h1>
+                        <h1>Hello, I'm Jocelyn.</h1>
+                        <p class="bio-blurb">Product designer passionate about crafting delightful & meaningful experiences through inclusive design.</p>
                         <div class="typewriter-text">
-                            <p id="app"></p>
+                            <p id="app" class="secondary"></p>
                         </div>
                     </div>                 
                 </div>
@@ -75,13 +76,12 @@
                     <p class="project-sponsor secondary">
                         UW CERSE / Sponsored Senior Capstone
                     </p>
-                    <h1 class="project-title">SERCH</h1>
+                    <h1 class="project-title">SERCH: STEM Equity Resource Community Hub</h1>
                     <p class="project-paragraph">
-                        Collaborated with a research team to develop a STEM equity resource discovery platform for university students and staff, 
-                        leveraging research insights to inform strategic design choices.
+                        Collaborated with a research team to develop a STEM equity resource discovery platform for university students and staff to seamlessly find and share STEM resources, leveraging research insights to inform strategic design choices.
                     </p>
                     <a href="/uw-cerse-stem-equity-resource-hub/" target="_self" class="project-link">
-                        <button class="project button">Read Case Study &#10142;</button>
+                        <button class="project button">View Case Study &#10142;</button>
                     </a>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                         loading="lazy"
                         class="project-img"
                     />
-                </a>    
+                </a>   
                 <div class="project-info">
                     <p class="project-sponsor secondary">
                         University of Washington HCDE 318
@@ -125,9 +125,31 @@
                         Designed a student-centric mobile app for increased engagement and community-building during online learning.
                     </p>
                     <a href="/husky-buddy/" target="_self" class="project-link">
-                        <button class="project button">Read Case Study &#10142;</button>
+                        <button class="project button">View Case Study &#10142;</button>
                     </a>
                 </div>
+            </div>
+            <div class="project-container div-margin flipped">
+                <div class="project-info">
+                    <p class="project-sponsor secondary">
+                        University of Washington HCDE 301
+                    </p>
+                    <h1 class="project-title">Instagram Communication Strategy for Mint Mobile</h1>
+                    <p class="project-paragraph">
+                        Restructuring Mint Mobile's Instagram communication strategy to reinforce their $15/month Premium Wireless offering. 
+                    </p>
+                    <a href="/mint-mobile/" target="_self" class="project-link">
+                        <button class="project button">View Case Study &#10142;</button>
+                    </a>
+                </div>
+                <a href="/mint-mobile/" target="_self" class="project-link">
+                    <img
+                        src="./assets/images/mint-mobile/home-project-image.png"
+                        alt="Mint Mobile Case Study"
+                        loading="lazy"
+                        class="project-img"
+                    />
+                </a>   
             </div>
         </section>
 
@@ -135,29 +157,35 @@
         <section class="playground section-regular">
             <h1>Playground &darr;</h1>
             <div class="playground-grid div-margin">
-                <div class="playground-div">
-                    <img 
-                        src="./assets/images/playground/boba-run.png"
-                        alt="Boba Run Game"
-                        loading="lazy"
-                        class="playground-image"/>
-                    <p class="image-caption">Boba Run</p>
+                <div class="playground-div linkable">
+                    <a href="/social-media-graphics/">
+                        <img 
+                            src="./assets/images/playground/social-media-designs.png"
+                            alt="Designs for social media and apparel"
+                            loading="lazy"
+                            class="playground-image"/>
+                        <p class="image-caption">Social Media Graphics</p>
+                    </a>
                 </div>
-                <div class="playground-div">
-                    <img 
-                        src="./assets/images/playground/mint-mobile.png"
-                        alt="Mint Mobile Redesign"
-                        loading="lazy"
-                        class="playground-image"/>
-                    <p class="image-caption">Mint Mobile</p>
+                <div class="playground-div linkable">
+                    <a href="https://jclync.github.io/boba-run/" target="_blank">
+                        <img 
+                            src="./assets/images/playground/boba-run.png"
+                            alt="Boba Run Game"
+                            loading="lazy"
+                            class="playground-image"/>
+                        <p class="image-caption">Boba Run</p>
+                    </a>
                 </div>
-                <div class="playground-div">
-                    <img 
-                        src="./assets/images/playground/vera-project.png"
-                        alt="Vera Project Redesign"
-                        loading="lazy"
-                        class="playground-image"/>
-                    <p class="image-caption">The Vera Project</p>
+                <div class="playground-div linkable">
+                    <a href="./assets/file-uploads/vera-project-brand-book.pdf" target="_blank">
+                        <img 
+                            src="./assets/images/playground/vera-project.png"
+                            alt="Vera Project Redesign"
+                            loading="lazy"
+                            class="playground-image"/>
+                        <p class="image-caption">The Vera Project Redesign</p>
+                    </a>
                 </div>
                 <a href="/playground/" class="view-more">View more &rarr;</a>
             </div>
