--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -65,7 +65,7 @@
                 <h1 class="case-study-title">Husky Buddy</h1>
                 <h3 class="secondary">Creating student connections, one buddy at a time</h3>
                 <p>
-                    Husky Buddy emerged from a Human Centered Design & Engineering course project, HCDE318 - Introduction to User-Centered Design, where my team aimed to develop a solution to streamline the formation of online groups and boost student engagement amidst challenges presented by the COVID-19 pandemic. <br><br>
+                    Husky Buddy emerged from an University of Washington Human Centered Design & Engineering course project, HCDE318 - Introduction to User-Centered Design, where my team aimed to develop a solution to streamline the formation of online groups and boost student engagement amidst challenges presented by the COVID-19 pandemic. <br><br>
                     Experiencing the transition to remote learning firsthand, my team and I witnessed the effects of 'Zoom fatigue' and the difficulties of connecting with classmates online. Motivated by these experiences, we chose to address the importance of community-building, recognizing its potential to foster greater student engagement in online learning environments.                 
                 </p>
             </div>
