--- a/playground/index.html
+++ b/playground/index.html
@@ -40,7 +40,20 @@
                 <div class="playground-container">
                     <div class="playground-item-container">
                         <div class="playground-item linkable">
-                            <a href="https://jclync.github.io/boba-run/">
+                            <a href="/social-media-graphics/">
+                                <img 
+                                src="../assets/images/playground/social-media-designs.png"
+                                alt="Social Media graphics"
+                                loading="lazy"
+                                class="playground-image"/>
+                            </a>
+                        </div>
+                        <p class="subheader"><a href="/social-media-graphics/">Social Media Graphics</a></p>
+                        <p>Designed social media posts and apparel</p>
+                    </div>
+                    <div class="playground-item-container">
+                        <div class="playground-item linkable">
+                            <a href="https://jclync.github.io/boba-run/" target="_blank">
                                 <img 
                                 src="../assets/images/playground/boba-run.png"
                                 alt="Boba Run Game"
@@ -49,20 +62,8 @@
                                 />
                             </a>
                         </div>
-                        <p class="subheader"><a href="https://jclync.github.io/boba-run/">Boba Run</a></p>
+                        <p class="subheader"><a href="https://jclync.github.io/boba-run/" target="_blank">Boba Run</a></p>
                         <p>Game inspired by Cookie Run, coded entirely in JavaScript</p>
-                    </div>
-                    <div class=playground-item-container>
-                        <div class="playground-item">
-                            <img 
-                            src="../assets/images/playground/mint-mobile.png"
-                            alt="Mint Mobile Project"
-                            loading="lazy"
-                            class="playground-image"
-                            />
-                        </div>
-                        <p class="subheader">Mint Mobile</p>
-                        <p>Communications Strategy for Mint Mobile's Instagram</p>
                     </div>
                     <div class=playground-item-container>
                         <div class="playground-item linkable">
