update margin and padding

--- a/mint-mobile/index.html
+++ b/mint-mobile/index.html
@@ -327,7 +327,7 @@
                     </div>
                 </div>
                 <p>
-                    Based on feedback from the usability testing, our team began working on adding more content to the feed by fleshing out the Mintfluencers campaign, adding reels and videos, and differentiating ads from regular posts. While my team mebers worked on the targeted ads, I focused on the Mintfluencers campaign. 
+                    Based on feedback from the usability testing, our team began working on adding more content to the feed by fleshing out the Mintfluencers campaign, adding reels and videos, and differentiating ads from regular posts. While my team members worked on the targeted ads, I focused on the Mintfluencers campaign. 
                 </p>
             </div>
         </section>
