add playground fun

--- a/playground/index.html
+++ b/playground/index.html
@@ -58,8 +58,7 @@
                                 src="../assets/images/playground/boba-run.png"
                                 alt="Boba Run Game"
                                 loading="lazy"
-                                class="playground-image"
-                                />
+                                class="playground-image"/>
                             </a>
                         </div>
                         <p class="subheader"><a href="https://jclync.github.io/boba-run/" target="_blank">Boba Run</a></p>
@@ -72,8 +71,7 @@
                                 src="../assets/images/playground/vera-project.png"
                                 alt="The Vera Project Redesign"
                                 loading="lazy"
-                                class="playground-image"
-                                />
+                                class="playground-image"/>
                             </a>
                         </div>
                         <p class="subheader"><a href="../assets/file-uploads/vera-project-brand-book.pdf" target="_blank">The Vera Project Redesign</a></p>
@@ -85,8 +83,7 @@
                             src="../assets/images/playground/bobaaa.gif"
                             alt="Bobaaa Drink Generator"
                             loading="lazy"
-                            class="bobaaa playground-image"
-                            />
+                            class="bobaaa playground-image"/>
                         </div>
                         <p class="subheader">Bobaaa</p>
                         <p>Random boba generator that uses 2 APIs to suggest a boba drink based on a person's emotion, coded in Python and HTML</p>
@@ -96,6 +93,21 @@
             <div class="div-margin">
                 <h2>playground.just for fun</h2>
                 <p class="secondary">ways I stay creative outside of design</p>
+                <div class="fun-container div-margin">
+                    <p>One of my hobbies is crafting with friends - here are some of the things I've created</p>
+                    <div class="fun-image-container">
+                        <img 
+                        src="../assets/images/playground/canvas-painting.png"
+                        alt="canvas painting"
+                        loading="lazy"
+                        class="fun-image"/>
+                        <img 
+                        src="../assets/images/playground/ceramics.png"
+                        alt="ceramics"
+                        loading="lazy"
+                        class="fun-image"/>
+                    </div>
+                </div>
             </div>
         </section>
 
