--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,7 @@
                         <li>✢ Taiwanese-American, in which I grew up with an appreciation for lots of family time, card games, and food during cultural celebrations</li>
                         <li>✢ an avid baker</li>
                         <li>✢ a foodie, always looking up new food places to try</li>
-                        <li>✢ a creative, catch me doodling, knitting, or using the occasional needle and thread</li>
+                        <li>✢ a creative, catch me doodling, knitting, crafting, or using the occasional needle and thread</li>
                         <li>✢ a tinker, I enjoy fiddling with physical prototyping and coding projects</li>
                         <li>✢ a puzzler, I love logic puzzles and playing the NYT games</li>
                     </ul>
@@ -80,8 +80,9 @@
                 <div class="outside-of-design-box">
                     <h2>Outside of design, you can find me..</h2>
                     <ul class="bio-list">
-                        <li>✢ trying out new boba spots with my friends</li>
+                        <li>✢ trying out new boba spots</li>
                         <li>✢ documenting my foodie adventures</li>
+                        <li>✢ crafting with my friends</li>
                         <li>✢ catching up on Chinese and Korean dramas on my watch list</li>
                         <li>✢ going on drives while listening to music</li>
                     </ul>
@@ -98,102 +99,13 @@
                 </div>
                 <div class="design-philosophy-box hidden">
                     <h2>My design philosophy</h2>
-                    <ul>
-                        <li>Jane just set a new record in cycling: 30 miles!</li>
-                        <li>Mike completed the 30-Day Running Streak Challenge!</li>
-                        <li>Anna shared a new workout: 'Hill Sprints Interval'.</li>
-                    </ul>
+                    <p></p>
                 </div>            
             </div>
         </section>
 
-        <div class="hidden">
-        <!-- Hero Section -->
-        <section class="hero section-regular" id="about-me">
-            <h1 class="header">Hi again! Here's a little about me..</h1>
-            <div class="bio-container">
-                <div>
-                    <img
-                    src="../assets/images/profile.jpg"
-                    alt="Jocelyn wearing coral t-shirt sitting in front of the Eiffel Tower"
-                    loading="lazy"
-                    class="hero-img"/>
-                </div>
-                <div class="bio">
-                    <p class="bio-paragraph">
-                        I first learned about design when I took a coding class in high school and learned how to use 
-                        Javascript to code an interactive minigame for my class project. With interests in the intersection 
-                        of design and technology, I began studying Human Centered Design & Engineering at the 
-                        University of Washington.
-                    </p>
-                    <p class="bio-paragraph">
-                        I am passionate about creating digital products that are inclusive and user-centric. As a designer, 
-                        I seek to bring people together using the products that I create, making meaningful impacts in their lives. 
-                    </p>
-                    <button class="resume button hidden">
-                        View Resume &#10142;
-                    </button>
-                </div>
-            </div>
-        </section>
-
-        <!-- Design Philosophy Section -->
-        <section class="design-philosophy section-regular hidden" id="design-philosophy">
-            <div class="dp-container">
-                <h1>my design philosophy</h1>
-                <!-- animate__animated animate__shakeX -->
-                <div class="dp">
-                    <p class="dp-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-                        dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-                        inventore tempore minus nemo, iste ullam illo laboriosam maiores
-                        repudiandae quos!
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <!-- More about me section -->
-        <section class="hero section-regular" id="more">
-            <div class="grid-container">
-                <div>
-                    <h1 class="header">Quick Links</h1>
-                </div>  
-                <div>
-                    <ul class="bio-list">
-                        <li><a href="https://www.linkedin.com/in/jocelyn-chen-/" class="secondary link">LinkedIn&nearr;</a></li>
-                        <li><a href="mailto: jocelynchen1126@gmail.com" class="secondary link">Email&nearr;</a></li>
-                        <li><a href="https://github.com/jclync" class="secondary link">Coding Projects&nearr;</a></li>
-                        <li><a href="../assets/file-uploads/Jocelyn_Chen_Resume.pdf" target="_blank" class="secondary link">Resume&nearr;</a></li>
-                    </ul>
-                </div>  
-                <div>
-                    <h1 class="header">More about me ◡̈</h1>
-                </div>
-                <div class="bio-grid">
-                    <h3>I am..</h3>
-                    <ul class="bio-list">
-                        <li>Taiwanese-American, in which I grew up with an appreciation for lots of family time, card games, and food during cultural celebrations</li>
-                        <li>an avid baker</li>
-                        <li>a foodie, always looking up new food places to try</li>
-                        <li>a creative, catch me doodling, knitting, or using the occasional needle and thread</li>
-                        <li>a tinker, I enjoy fiddling with physical prototyping and coding projects</li>
-                        <li>a puzzler, I love logic puzzles and playing the NYT games</li>
-                    </ul>
-                    <h3>Outside of design, you can find me..</h3>
-                    <ul class="bio-list">
-                        <li>trying out new boba spots with my friends</li>
-                        <li>documenting my foodie adventures</li>
-                        <li>catching up on Chinese and Korean dramas on my watch list</li>
-                        <li>going on drives while listening to music</li>
-                    </ul>
-                </div>  
-            </div>
-        </section>
-        </div>
-
         <!-- Contact section -->
-        <section class="contact-me">
+        <section class="contact-me hidden">
 
         </section>
 
